Get data from gateway and sensors (#11)
* Working decode of sensor data from gateway

* Optimized byte mask

* Added reporting and getting of all rooms

* Do not log the /status endpoint to avoid noise

* Did some light cleanup

* Caching room -> sensor values

* Updated api and contract
